--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -22,9 +22,15 @@
 }
 
 p {
-  font-size: 1.5rem;
+  font-size: 1rem;
   line-height: 1.5;
   margin: 3rem 0;
+}
+
+@media screen and (min-width: 1200px) {
+  p {
+    font-size: 1.5rem;
+  }
 }
 
 h1,
@@ -185,6 +191,7 @@ img {
 @media screen and (min-width: 1200px) {
   .container {
     max-width: 1200px;
+    padding: 0 1rem;
   }
 }
 
@@ -208,31 +215,105 @@ header div {
   width: 100%;
 }
 
+header .navigation {
+  position: fixed;
+  left: -100%;
+  top: 4rem;
+  flex-direction: column;
+  width: 100%;
+  text-align: center;
+  transition: 0.3s;
+  z-index: 9;
+  background-color: var(--nav-bg);
+  height: 100vh;
+}
+
+header .navigation.active {
+  left: 0;
+}
+
+header .navigation.active li {
+  transition-delay: 2s;
+}
+
 header .navigation ul {
   height: 100%;
   list-style: none;
 }
 
 header .navigation ul li {
-  display: inline-block;
-  padding: 0 1rem;
+  display: block;
+  padding: 2rem 1rem;
 }
 
-header a {
+@media screen and (min-width: 1200px) {
+  header .navigation {
+    position: relative;
+    left: 0;
+    top: 0;
+    display: flex;
+    justify-content: space-between;
+    align-items: flex-start;
+    flex-direction: column;
+    height: auto;
+  }
+  header .navigation ul {
+    height: 100%;
+    list-style: none;
+  }
+  header .navigation ul li {
+    display: inline-block;
+    padding: 0 1rem;
+  }
+}
+
+header .hamburger {
+  display: block;
+  z-index: 99;
+}
+
+header .bar {
+  display: block;
+  width: 25px;
+  height: 3px;
+  margin: 4px 0;
+  transition: all 0.3s ease-in-out;
+  background-color: var(--nav-color);
+}
+
+header .hamburger.active .bar:nth-child(2) {
+  opacity: 0;
+}
+
+header .hamburger.active .bar:nth-child(1) {
+  transform: translateY(7px) rotate(45deg);
+}
+
+header .hamburger.active .bar:nth-child(3) {
+  transform: translateY(-7px) rotate(-45deg);
+}
+
+@media screen and (min-width: 1200px) {
+  header .hamburger {
+    display: none;
+  }
+}
+
+a {
   color: var(--nav-color);
 }
 
-header #dark-mode-toggle {
+#dark-mode-toggle {
   transform: scale(1);
 }
 
-header #dark-mode-toggle:hover {
+#dark-mode-toggle:hover {
   transform: scale(200%);
 }
 
 .hero-section {
   background-color: var(--hero-background);
-  padding: 2rem 0;
+  padding: 6rem 0 2rem;
 }
 
 @media screen and (min-width: 1200px) {
@@ -252,16 +333,25 @@ header #dark-mode-toggle:hover {
 }
 
 button {
-  padding: 1rem 2rem;
+  padding: 0.5rem 1rem;
   border: none;
-  font-size: 1.5rem;
+  font-size: 1rem;
   background-color: var(--button-bg-color);
-  border: 4px solid var(--button-bg-color);
+  border: 2px solid var(--button-bg-color);
   color: var(--button-text-color);
   border-radius: 0.4rem;
   font-weight: normal;
-  margin-right: 1.5rem;
+  margin-right: .5rem;
   transition: all 0.4s ease-in-out;
+}
+
+@media screen and (min-width: 1200px) {
+  button {
+    margin-right: 1.5rem;
+    font-size: 1.5rem;
+    padding: 1rem 2rem;
+    border: 4px solid var(--button-bg-color);
+  }
 }
 
 button:hover {
