--- a/sass/main.scss
+++ b/sass/main.scss
@@ -28,9 +28,10 @@ $color-primary: #63ADF2;
     --button-text-color: #{$color-dark};
 }
 
+@import "mixins/mixins";
 @import "base/base";
 @import "typography/typography";
-@import "mixins/mixins";
+
 
 // RESET
 
@@ -75,10 +76,10 @@ img {
 
     @include mq(large) {
         max-width: 1200px;
-        
+        padding: 0 1rem;
     }
 
-    &.full{
+    &.full {
         min-width: 100%;
     }
 }
@@ -99,34 +100,108 @@ header {
     }
 
     .navigation {
-        
+        position: fixed;
+        left: -100%;
+        top: 4rem;
+        flex-direction: column;
+        width: 100%;
+        text-align: center;
+        transition: 0.3s;
+        z-index: 9;
+        background-color: var(--nav-bg);
+        height: 100vh;
+
+        &.active {
+            left: 0;
+
+            li {
+                transition-delay: 2s;
+            }
+        }
+
         ul {
             height: 100%;
             list-style: none;
 
             li {
-                display: inline-block;
-                padding: 0 1rem;
+                display: block;
+                padding: 2rem 1rem;
             }
         }
-    }    
 
-    a {
-        color: var(--nav-color);
+        @include mq(large) {
+            position: relative;
+            left: 0;
+            top: 0;
+            display: flex;
+            justify-content: space-between;
+            align-items: flex-start;
+            flex-direction: column;
+            height: auto;
+
+            ul {
+                height: 100%;
+                list-style: none;
+    
+                li {
+                    display: inline-block;
+                    padding: 0 1rem;
+                }
+            }
+        }
     }
 
-    #dark-mode-toggle{
-        transform: scale(1);
-        
-        &:hover {
-            transform: scale(200%);  
+    .hamburger {
+        display: block;
+        z-index: 99;
+    }
+
+    .bar {
+        display: block;
+        width: 25px;
+        height: 3px;
+        margin: 4px 0;
+        -webkit-transition: all 0.3s ease-in-out;
+        transition: all 0.3s ease-in-out;
+        background-color: var(--nav-color);
+    }
+
+    .hamburger.active .bar:nth-child(2) {
+        opacity: 0;
+    }
+
+    .hamburger.active .bar:nth-child(1) {
+        transform: translateY(7px) rotate(45deg);
+    }
+
+    .hamburger.active .bar:nth-child(3) {
+        transform: translateY(-7px) rotate(-45deg);
+    }
+
+    @include mq(large) {
+        .hamburger {
+            display: none;
         }
+    }
+
+}
+
+a {
+    color: var(--nav-color);
+}
+
+#dark-mode-toggle {
+    transform: scale(1);
+
+    &:hover {
+        transform: scale(200%);
     }
 }
 
+
 .hero-section {
     background-color: var(--hero-background);
-    padding: 2rem 0;
+    padding: 6rem 0 2rem;
 
     @include mq(large) {
         padding: 16rem 0 8rem;
@@ -144,16 +219,23 @@ header {
 
 
 button {
-    padding: 1rem 2rem;
+    padding: 0.5rem 1rem;
     border: none;
-    font-size: 1.5rem;
+    font-size: 1rem;
     background-color: var(--button-bg-color);
-    border: 4px solid var(--button-bg-color);
+    border: 2px solid var(--button-bg-color);
     color: var(--button-text-color);
     border-radius: 0.4rem;
     font-weight: normal;
-    margin-right: 1.5rem;
+    margin-right: .5rem;
     transition: all 0.4s ease-in-out;
+
+    @include mq(large) {
+        margin-right: 1.5rem;
+        font-size: 1.5rem;
+        padding: 1rem 2rem;
+        border: 4px solid var(--button-bg-color);
+    }
 
     &:hover {
         color: var(--button-bg-color);
@@ -163,11 +245,10 @@ button {
     &.outline {
         background-color: transparent;
         color: var(--button-bg-color);
-        
+
         &:hover {
             background-color: var(--button-bg-color);
             color: var(--button-text-color);
         }
     }
 }
-
